--- a/PedidoVenda/src/main/webapp/produtos/CadastroProdutos.xhtml
+++ b/PedidoVenda/src/main/webapp/produtos/CadastroProdutos.xhtml
@@ -9,48 +9,46 @@
 	<ui:define name="title">
 		Novo Produto
 	</ui:define>
-	
+
 	<ui:define name="main">
-		<h1>Novo Produto</h1>
-		
-		<p:toolbar style="margin-top: 20px">
-			<p:toolbarGroup align="left">
-				<p:button id="new-button" value="Novo" outcome="/produtos/CadastroProdutos"/>
-				<p:commandButton id="save-button" value="Salvar" />
-			</p:toolbarGroup>
-			
-			<p:toolbarGroup align="right">
-				<p:button id="search-button" value="Pesquisa" />
-			</p:toolbarGroup>
-		</p:toolbar>
-		
-		<p:panelGrid id="panel-products" columns="2" style="width: 100%; margin-top: 20px" columnClasses="rotulo,campo">
-			<p:outputLabel value="SKU" for="sku"/>
-			<p:inputText id="sku" size="20" maxlength="20"/>
-			
-			<p:outputLabel value="Nome" for="nome"/>
-			<p:inputText id="nome" size="60" maxlength="60"/>
-			
-			<p:outputLabel value="Categoria" for="categoria"/>
-			<p:selectOneMenu id="categoria">
-				<f:selectItem itemLabel="Selecione a categoria"/>
-			</p:selectOneMenu>
-			
-			<p:outputLabel value="Subcategoria" for="subCategoria"/>
-			<p:selectOneMenu id="subCategoria">
-				<f:selectItem itemLabel="Selecione a subcategoria"/>
-			</p:selectOneMenu>
-			
-			<p:outputLabel value="Valor Unitário" for="valorUnitario"/>
-			<p:inputText id="valorUnitario" size="10" maxlength="10" styleClass="moeda"/>
-			
-			<p:outputLabel value="Estoque" for="estoque"/>
-			<p:inputText id="estoque" size="10" maxlength="4"/>
-			
-			
-			
-		</p:panelGrid>
-		
+		<h:form>
+
+			<h1>Novo Produto</h1>
+
+			<p:toolbar style="margin-top: 20px">
+				<p:toolbarGroup align="left">
+					<p:button id="new-button" value="Novo"
+						outcome="/produtos/CadastroProdutos" />
+					<p:commandButton id="save-button" value="Salvar" />
+				</p:toolbarGroup>
+				<p:toolbarGroup align="right">
+					<p:button id="search-button" value="Pesquisa" outcome="/produtos/PesquisaProdutos"/>
+				</p:toolbarGroup>
+			</p:toolbar>
+
+			<p:panelGrid id="panel-products" columns="2"
+				style="width: 100%; margin-top: 20px" columnClasses="rotulo,campo">
+				<p:outputLabel value="SKU" for="sku" />
+				<p:inputText id="sku" size="20" maxlength="20" />
+				<p:outputLabel value="Nome" for="nome" />
+				<p:inputText id="nome" size="60" maxlength="60" />
+				<p:outputLabel value="Categoria" for="categoria" />
+				<p:selectOneMenu id="categoria">
+					<f:selectItem itemLabel="Selecione a categoria" />
+				</p:selectOneMenu>
+				<p:outputLabel value="Subcategoria" for="subCategoria" />
+				<p:selectOneMenu id="subCategoria">
+					<f:selectItem itemLabel="Selecione a subcategoria" />
+				</p:selectOneMenu>
+				<p:outputLabel value="Valor Unitário" for="valorUnitario" />
+				<p:inputText id="valorUnitario" size="10" maxlength="10"
+					styleClass="moeda" />
+				<p:outputLabel value="Estoque" for="estoque" />
+				<p:inputText id="estoque" size="10" maxlength="4" />
+			</p:panelGrid>
+
+		</h:form>
+
 	</ui:define>
 
 </ui:composition>
