--- a/PedidoVenda/src/main/webapp/produtos/PesquisaProdutos.xhtml
+++ b/PedidoVenda/src/main/webapp/produtos/PesquisaProdutos.xhtml
@@ -14,7 +14,7 @@
 
 		<h:form>
 
-			<h1>Pesquisa Produtos</h1>
+			<h1>Pesquisa de Produtos</h1>
 
 			<p:toolbar style="margin-top:20px">
 				<p:toolbarGroup align="left">
